app/assets/stylesheets/profile.scss
.profile-info h1 {
  font-size: 38px;
  margin-top: 1px;
}

.profile-info h3 {
  margin-bottom: 0;
}


h3 {
  font-size: 12px;
  font-weight: 200;
}

a {
  color: black;
  text-decoration: none;
}

.song-list {
  // display: flex;
  /* Disable horizontal scroll */
  border: 1px solid #f3f3f3;
  overflow-x: scroll;
  // height: 260px;
  height: 100%; // this WAS ON
}

.song-list li:first-child{
  border-top: 0;
}

// li {
//   background-color: white;
//   transition: background-color 0.2s ease;
// }
//
// li:hover {
//   text-decoration: none;
//   background-color: white;
// }

.song-list li {
  padding: 6px;
  border-top: 1px solid #ddd;
}

.song-list li a {
  margin-left: 10px;
}

.song-list li:hover, .song-list a:hover {
  letter-spacing: 0;
  background: #eee;
  // text-decoration: underline;
  button {
    color: #000;
  }
}

// .song-list-row {
//   // display: flex;
//   // flex-direction: column;
// }
.song-list-button {
  font-size: 12px;
  margin: 0;
  margin-right: 2px;
  margin-left: 2px;
  border-radius: 50%;
  border-color: transparent;
  width: 22px;
  height: 22px;

}
// .song-list-button:hover {
//   border-color: #1bc156;
// }

.plus-circle{
  color: #eee;
  // font-size: 14px;
}

.song-list-play {
  color: #fff;
}

.user-session-nav {
  // position: absolute;
  // margin-left: 60%;
  display: flex;
  flex-direction: row;
  // justify-content: center;
  align-items: center;
  margin-right: 200px;
  h3 {
    margin: 0;
  }

  // border: 1px solid #282828;
  // border-bottom: 1px solid #282828;
  // background: #fff;
}

.current-user-avatar {
  height: 25px;
  width: 25px;
  padding: 2px;
  margin: 5px;
  border: 1px solid #ddd;
  border-radius: 800px;
  transition: border-color 0.5s ease;
}

.current-user-avatar:hover {
  border-color: #222;
}


.sign-out-button {
  // background-color: red;
  color: #aaa;
  border: 0;
  width: auto;
  margin-left: 10px;
}

.sign-out-button:hover {
  color: #282828;
  // -webkit-transform: rotateX(70deg); /* Safari */
  // transform: rotateX(70deg);
  // transform: scale(1.5px);
}


.header-button-more {
  font-size: 14px;
  // font-weight: 700;
  width: 30px;
  display: flex;
}

#ellipsis {
  margin: 0;
  color: black;
}


img {
  display: block;
  // z-index: -1;
  border: 0;
  padding: 10px;
  width: 280px;
  height: 280px;
  // border-radius: 800px;
  // background: image_url("watercolor1.jpg") 0 0;
}

#profile-pic-div {
  display: flex;
  // z-index: -1;
  // border: 1px solid #eee;
  padding: 0px;
  margin: 0;
  margin-right: 50px;
  width: 290px;
  height: 290px;
  border-radius: 800px;
  justify-content: center;
  // background: image_url("watercolor1.jpg") -47px -50px;
  // background: image_url("water2.png") -57px -0px;
}

#profile-pic {
  // display: block;
  // z-index: -1;
  padding: 0px;
  margin-top: -50px;
  width: 240px;
  height: 240px;
  // border-radius: 800px;
  // border: 100px solid white !important;
  border: 0;
  margin: auto;

  // box-shadow: 1px 1px 100px #ddd;// asana #161e28;



  // -webkit-filter: blur(20px); /* Safari */
  // filter: blur(20px);

  // border-radius: 800px; // round or square
}


/* NEW */
.profile-header {
  display: flex;
  justify-content: left;
  // width: 100%;
  width: 1000px;
  // border: 1px solid purple;
  margin-left: 90px;
}

.profile-info {
  display: block;
  padding: 20px;
  // border: 1px solid red;
  width: 100%;
}

.profile-button-box {
  margin-top: 5px;
  padding: 0;
  display: flex;
  justify-content: left;
  // background-color: red;
  button {
    // font-weight: 700;
  }
}

.song-list-fields {
  display: flex;
  justify-content: space-between;
  margin-left: 60px;
}

.song-list {
  border: 0;
  margin-left: 60px;
  background-color: transparent;
  li {
    background-color: transparent;
  }
}


/* FOOTER */
// footer {
//   position:absolute;
//   bottom: 0;
//   padding-right: 10px;
//   margin: 0;
//   width:100%;
//   height:120px;   /* Height of the footer */
//   border-top: 1px solid #a0a0a0;
// }

.footer-all {
  display: flex;
  justify-content: space-between;
}

.play-controls {
  display: flex;
  justify-content: center;
  padding: 20px;
}




/* The sidebar menu */
.sidenav {
    // height: 100%; /* Full-height: remove this if you want "auto" height */
    // height: 100%; /* Full-height: remove this if you want "auto" height */
    // width: 200px; /* Set the width of the sidebar */
    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
    // z-index: 0; /* Stay on top */
    top: 0; /* Stay at the top */
    left: 0;
    bottom: 110px;
    width: 186px;
    // overflow-x: hidden; /* Disable horizontal scroll */
    // overflow-x: scroll;
    overflow: scroll;
    // padding-top: 20px;


    // border-right: 5px solid green;
    border-right: 1px solid #181313;
    // background-color: #f9f9f9;
    background-color: #fff;
    // background-color: #000; // color-flip

    // background-color: red;

}

/* The navigation menu links */
.sidenav-content a {
    padding: 6px 8px 6px 16px;
    text-decoration: none;
    /* font-size: 25px; */
    // color: #818181;
    display: block;

    // color: #aaa; // color-flip
}

.sidenav-content{
  margin-top: 20px;
  // display: flex;
  // flex-direction: column;
  // height: 620px;
  h3 {
    margin: 0;
  }

  ul a .sidebar-library-items {
    font-weight: 700;
  }
}

.sidebar-playlists {
  // display: flex;
  // overflow: hidden;
}

/* When you mouse over the navigation links, change their color */
a:hover {
    color: #535353;
    text-decoration: none;
    // text-decoration: underline;
}

.new-playlist {
  position: fixed;
  left: 0;
  bottom: 80px;

  width: 187px;
  margin: 0;
  border-width: 1px 0px 0px 0px;
  border-right: 1px solid #181313;
  padding: 0;
  border-radius: 0;
  background-color: #fff;
  letter-spacing: 0;
  background-color: #f8f8f8;
}

.new-playlist:hover{
  border-color: #aaa;
  // color: white;
  // background-color: rgb(29, 185, 84);

  transform: none;
  letter-spacing: 0.5px;
}


.profile-description {
  padding-bottom: 4px;
  // border: 1px solid red;
}

/* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
// @media screen and (max-height: 450px) {
//     .sidenav {padding-top: 15px;}
//     .sidenav a {font-size: 18px;}
// }

